fix: update DTOs and entities